kubernetes/monitoring/13.grafana.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  labels:
    app: grafana
spec:
  ingressClassName: nginx
  rules:
    - host: monitoring.example.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
